kubernetes/argocd/argocd-server-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    route.scope: internal
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  hostnames:
    - argocd.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      backendRefs:
        - name: argocd-server
          port: 80
